[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sentiment-analysuz"
version = "0.1.0"
description = "A project for sentiment analysis"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "pandas",
    "nltk",
    "scikit-learn",
    "numpy",
    "matplotlib",
    "seaborn"
]
